# Footprint

./: .gitignore  README.md
.github/workflows/: deploy-pages.yml
backend/: pyproject.toml
backend/footprint_api/: __init__.py  main.py  models.py
backend/footprint_api/data/: implementations.json
backend/footprint_api/services/: __init__.py  datasheet_parser.py  firmware_analyzer.py  pipeline_recommender.py  prompt_builder.py  rag_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
