[project]
name = "footprint-api"
version = "0.1.0"
description = "API for datasheet parsing, firmware analysis, local RAG retrieval, and LLM prompt assembly for Footprint."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
pdf = ["pypdf>=4.3.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
